# GradioExamples

./: .gitignore  FromSketchpadToImage.py  ImageClassification.py  ImageEditor.py  Images.ipynb  OllamaMain.py  PythonOllama.py  Reshape.py  Simple.py  app.py  gradiotutorial.ipynb  mnist.ipynb  model.h5  model.keras  ollama.ipynb  pyproject.toml  sketchToMatrix.py  training.py
Gradio_RAG/: .env  chat.py  rag.py  ui.py
