[tool.poetry]
name = "gradiomnist"
version = "0.1.0"
description = "A Gradio app that runs MNIST data training with web front end"
authors = ["Ben Koo <koo0905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.19.2"
tensorflow = "^2.15.0.post1"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
torchvision = "^0.17.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
