[tool.poetry]
name = "gradioexamples"
version = "0.1.0"
description = ""
authors = ["Ben Koo <koo0905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.2.0"
tensorflow = "^2.15.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
